--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>RAJAKUMAR.S UI/UX Developer - Front End Developer - Graphic Designer - Web Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Premkumar Resume" />
-    <meta name="author" content="Premkumar" />
+    <meta name="description" content="Rajkumar Resume" />
+    <meta name="author" content="Rajkumar" />
     <link rel="shortcut icon" href="">
 
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
