--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ my Illustration ability to communicate and present ideas with precision and clar
                       <div class="timeline-event te-primary">
                         <h5 class="event-date">July 2015 - October 2017</h5>
                         <h4 class="event-name">Web Designer & Front End Developer</h4>
-                        <span class="event-description">Santhilag Technosoft, Erode</span>
+                        <span class="event-description">Santhila Databot Private Limited, Erode</span>
                         <p>Analyse and design of websites. Developing a websites from scratch to end. Developing New Ideas, Concepts, Solutions and Approaches for Digital Transformation.</p>
                       </div>
                     </div>
