--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>RAJAKUMAR.S UI/UX Developer - Front End Developer - Graphic Designer - Web Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Rajkumar Resume" />
-    <meta name="author" content="Rajkumar" />
+    <meta name="description" content="Premkumar Resume" />
+    <meta name="author" content="Premkumar" />
     <link rel="shortcut icon" href="">
 
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
@@ -135,7 +135,7 @@
                     <!--<h3>I am Web Designer @ Company.com</h3>-->
                     <p class="para">I'm a Innovative and Creative Thinker, Graphic Designing and Front end developer who likes to use
 my Illustration ability to communicate and present ideas with precision and clarity.</p>
-					<p class="para">I have 2+ years experienced in Graphic designs, UI/UX Technologies, I’m a self-learner and motivate person, I can face web related stuffs alone or working together with team members. I hope my positive attitude is do and make something new.</p>
+					<p class="para">I have 3+ years experienced in Graphic designs, UI/UX Technologies, I’m a self-learner and motivate person, I can face web related stuffs alone or working together with team members. I hope my positive attitude is do and make something new.</p>
                   </div>
 
                   <div class="col-sm-6 col-md-6 col-lg-4 subpage-block">
@@ -389,7 +389,7 @@ my Illustration ability to communicate and present ideas with precision and clar
                 <div class="section-title-block">
                   <div class="section-title-wrapper">
                     <h2 class="section-title">Resume</h2>
-                    <h5 class="section-description">2+ Years of Experience</h5>
+                    <h5 class="section-description">3+ Years of Experience</h5>
                   </div>
                 </div>
 
@@ -430,16 +430,19 @@ my Illustration ability to communicate and present ideas with precision and clar
                     <div class="timeline">
                       <!-- Single event -->
                       <div class="timeline-event te-primary">
-                        <h5 class="event-date">July 2015 - October 2017</h5>
-                        <h4 class="event-name">Web Designer & Front End Developer</h4>
-                        <span class="event-description">Santhila Databot Private Limited, Erode</span>
+                        <h5 class="event-date">January 2015 - February 2018</h5>
+                        <h4 class="event-name">Senior Web Designer</h4>
+                        <span class="event-description">Santhila Databot Private Limited</span>
+                        <p>Analyse and design of websites. Developing a websites from scratch to end. Developing New Ideas, Concepts, Solutions and Approaches for Digital Transformation.</p>
+                      </div>
+					  
+					  <div class="timeline-event te-primary">
+                        <h5 class="event-date">March 2018 - Present</h5>
+                        <h4 class="event-name">UI/UX Designer</h4>
+                        <span class="event-description">Orgware Technologies Private Limited</span>
                         <p>Analyse and design of websites. Developing a websites from scratch to end. Developing New Ideas, Concepts, Solutions and Approaches for Digital Transformation.</p>
                       </div>
                     </div>
-					<div>&nbsp;</div>
-					<div>&nbsp;</div>
-					<div>&nbsp;</div>
-					<div>&nbsp;</div>
                   </div>
 
                   <div class="col-sm-6 col-md-6 subpage-block">
