--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ my Illustration ability to communicate and present ideas with precision and clar
                 <div class="row">
                   <div class="col-sm-12 col-md-12">
                     <div class="download-cv-block">
-                      <a class="button" target="_blank" href="resume/Rajkumar.pdf">Download CV</a>
+                      <a class="button" target="_blank" href="Rajkumar.pdf">Download CV</a>
                     </div>
                   </div>
                 </div>
