--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <!--<h3>I am Web Designer @ Company.com</h3>-->
                     <p class="para">I'm a Innovative and Creative Thinker, Graphic Designing and Front end developer who likes to use
 my Illustration ability to communicate and present ideas with precision and clarity.</p>
-					<p class="para">I have 3+ years experienced in Graphic designs, UI/UX Technologies, I’m a self-learner and motivate person, I can face web related stuffs alone or working together with team members. I hope my positive attitude is do and make something new.</p>
+					<p class="para">I have 4+ years experienced in Graphic designs, UI/UX Technologies, I’m a self-learner and motivate person, I can face web related stuffs alone or working together with team members. I hope my positive attitude is do and make something new.</p>
                   </div>
 
                   <div class="col-sm-6 col-md-6 col-lg-4 subpage-block">
@@ -389,7 +389,7 @@ my Illustration ability to communicate and present ideas with precision and clar
                 <div class="section-title-block">
                   <div class="section-title-wrapper">
                     <h2 class="section-title">Resume</h2>
-                    <h5 class="section-description">3+ Years of Experience</h5>
+                    <h5 class="section-description">4+ Years of Experience</h5>
                   </div>
                 </div>
 
@@ -437,7 +437,7 @@ my Illustration ability to communicate and present ideas with precision and clar
                       </div>
 					  
 					  <div class="timeline-event te-primary">
-                        <h5 class="event-date">March 2018 - Present</h5>
+                        <h5 class="event-date">December 2018 - Present</h5>
                         <h4 class="event-name">UI/UX Designer</h4>
                         <span class="event-description">Orgware Technologies Private Limited</span>
                         <p>Analyse and design of websites. Developing a websites from scratch to end. Developing New Ideas, Concepts, Solutions and Approaches for Digital Transformation.</p>
@@ -521,7 +521,7 @@ my Illustration ability to communicate and present ideas with precision and clar
                 <div class="row">
                   <div class="col-sm-12 col-md-12">
                     <div class="download-cv-block">
-                      <a class="button" target="_blank" href="Rajkumar.pdf">Download CV</a>
+                      <a class="button" target="_blank" href="http://spireburst.com/raj/resume/Resume.pdf">Download CV</a>
                     </div>
                   </div>
                 </div>
