--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>RAJAKUMAR.S UI/UX Developer - Front End Developer - Graphic Designer - Web Designer</title>
+    <title>RAJKUMAR.S UI/UX Developer - Front End Developer - Graphic Designer - Web Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Rajakumar Resume" />
     <meta name="author" content="Rajakumar" />
@@ -41,7 +41,7 @@
         </div>
 
         <div class="site-title-block">
-          <h1 class="site-title">RAJAKUMAR S</h1>
+          <h1 class="site-title">RAJKUMAR S</h1>
         </div>
 
         <!-- Navigation -->
@@ -73,7 +73,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">RAJAKUMAR S</div>
+          <div class="mobile-site-title">RAJKUMAR S</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -93,7 +93,7 @@
             <section class="pt-page pt-page-1 section-without-bg section-paddings-0 table" data-id="home">
               <div class="section-inner">
                 <div class="home-page-block">
-                  <h2>RAJAKUMAR S</h2>
+                  <h2>RAJKUMAR S</h2>
                   <div class="owl-carousel text-rotation">                                    
                     <div class="item">
                       <p class="home-page-description">UI/UX Developer</p>
@@ -135,7 +135,7 @@
                     <!--<h3>I am Web Designer @ Company.com</h3>-->
                     <p class="para">I'm a Innovative and Creative Thinker, Graphic Designing and Front end developer who likes to use
 my Illustration ability to communicate and present ideas with precision and clarity.</p>
-					<p class="para">I have 4+ years experienced in Graphic designs, UI/UX Technologies, I’m a self-learner and motivate person, I can face web related stuffs alone or working together with team members. I hope my positive attitude is do and make something new.</p>
+					<p class="para">I have 5+ years experienced in Graphic designs, UI/UX Technologies, I’m a self-learner and motivate person, I can face web related stuffs alone or working together with team members. I hope my positive attitude is do and make something new.</p>
                   </div>
 
                   <div class="col-sm-6 col-md-6 col-lg-4 subpage-block">
